--- a/design.html
+++ b/design.html
@@ -17,6 +17,7 @@
 
 
 <body>
+	<div id="loading"></div>
     <!-- 侧边导航栏 -->
     <div class="menu-alide flex-column align-center">
     	
@@ -269,16 +270,11 @@
 </body>
 
 <script type="text/javascript">
- var options = {
-    strings: [
-        'YUQI LI',
-        '(Yuki)'
-    ],
-    typeSpeed: 80,   //打印速度
-    startDelay: 1000, //开始之前的延迟300毫秒
-    loop: true,      //是否循环
-};
-var typed = new Typed('#typed2', options);
+    $(window).ready(()=> {
+		setTimeout(() => {
+			$("#loading").fadeOut(500)
+		},1500)
+	})
 </script>
 
 </html>
