--- a/dream.html
+++ b/dream.html
@@ -18,6 +18,7 @@
 
 
 <body>
+	<div id="loading"></div>
     <!-- 侧边导航栏 -->
     <div class="menu-alide flex-column align-center">
     	<div class="avatar-box">
@@ -301,6 +302,12 @@
 		});
 		
 	});
+
+	$(window).ready(()=> {
+		setTimeout(() => {
+			$("#loading").fadeOut(500)
+		},1500)
+	})
 </script>
    
 </html>
