--- a/calligraphy.html
+++ b/calligraphy.html
@@ -18,6 +18,7 @@
 
 
 <body>
+	<div id="loading"></div>
     <!-- 侧边导航栏 -->
     <div class="menu-alide flex-column align-center">
     	<div class="avatar-box">
@@ -259,7 +260,13 @@
 		});
 		
 	});
-   </script>
+
+	$(window).ready(()=> {
+		setTimeout(() => {
+			$("#loading").fadeOut(500)
+		},2500)
+	})
+</script>
    
 
 </html>
