--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 
 <body>
+	<div id="loading"></div>
     <!-- 侧边导航栏 -->
     <div class="menu-alide flex-column align-center">
     	<div class="avatar-box">
@@ -101,3 +102,12 @@
 
 </html>
 
+<script type="text/javascript">
+
+	$(window).ready(()=> {
+		setTimeout(() => {
+			$("#loading").fadeOut(500)
+		},1500)
+	})
+
+</script>
