--- a/kungfu.html
+++ b/kungfu.html
@@ -19,6 +19,7 @@
 
 
 <body>
+	<div id="loading"></div>
     <!-- 侧边导航栏 -->
     <div class="menu-alide flex-column align-center">
     	<div class="avatar-box">
@@ -251,7 +252,11 @@
 		
 	});
 
-	
+	$(window).ready(()=> {
+		setTimeout(() => {
+			$("#loading").fadeOut(500)
+		},1500)
+	})
 
     
 </script>
