--- a/dream.html
+++ b/dream.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swordsman Dream & Cultivation</title>
+	<link rel="shortcut icon" href="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/cd0522b1-ba5f-4816-97d5-5d416ff96e63.jpeg">
     <link rel="stylesheet" href="static/aos-master/dist/aos.css'" media="all" />
     <script src="static/jquery.js"></script>
 	<script src="static/layui/layui.js"></script>
