--- a/chorus.html
+++ b/chorus.html
@@ -19,7 +19,9 @@
 
 
 <body>
-	<div id="loading"></div>
+	<div id="loading">
+		<img id="loading-content" src="/static/loading.gif"></img>
+	</div>
     <!-- 侧边导航栏 -->
     <div class="menu-alide flex-column align-center">
     	<div class="avatar-box">
@@ -74,7 +76,7 @@
     <div class="scroll-pendant-box">
         <div class="pendant-line"></div>
         <div>
-            <img class="pendant-scroll" src="../../static/img/cat-scroll.svg">
+            <img class="pendant-scroll" src="../../static/img/cookie-scroll.svg">
         </div>
     </div>
     
