--- a/design.html
+++ b/design.html
@@ -18,7 +18,9 @@
 
 
 <body>
-	<div id="loading"></div>
+	<div id="loading">
+		<img id="loading-content" src="/static/loading.gif"></img>
+	</div>
     <!-- 侧边导航栏 -->
     <div class="menu-alide flex-column align-center">
     	
