--- a/kungfu.html
+++ b/kungfu.html
@@ -20,7 +20,9 @@
 
 
 <body>
-	<div id="loading"></div>
+	<div id="loading">
+		<img id="loading-content" src="/static/loading.gif"></img>
+	</div>
     <!-- 侧边导航栏 -->
     <div class="menu-alide flex-column align-center">
     	<div class="avatar-box">
@@ -75,7 +77,7 @@
     <div class="scroll-pendant-box">
         <div class="pendant-line"></div>
         <div>
-            <img class="pendant-scroll" src="../../static/img/cat-scroll.svg">
+            <img class="pendant-scroll" src="../../static/img/cookie-scroll.svg">
         </div>
     </div>
     
@@ -110,9 +112,9 @@
 			  <i class="layui-icon layui-timeline-axis"></i>
 			  <div class="layui-timeline-content layui-text">
 				<h3 class="layui-timeline-title">2014&2015</h3>
-				<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+				<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;border: 0;">
 					<blockquote class="layui-elem-quote">
-						<p style="text-indent: 0 !important;font-size: 1rem;">
+						<p style="text-indent: 0 !important;">
 							During ten years of hard training, I won three consecutive championships in WNF with double titles (racing and performing). World Nunchaku Federation Competition competes for speed, prescribed and self-created routines, as well as nunchaku table tennis and blindfolded apple hunting.
 						</p>
 					</blockquote>
@@ -122,7 +124,7 @@
 						<div><img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/7b52a6a4-f933-4a42-9f5e-8f8889b69c71.png" tppabs="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/7b52a6a4-f933-4a42-9f5e-8f8889b69c71.png"></div>
 					</div>
 
-					<div style="margin: 0 auto;width:50%"><img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/2ef2a75b-4607-46aa-97d7-11a8b9245739.png" tppabs="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/2ef2a75b-4607-46aa-97d7-11a8b9245739.png"></div>
+					<!-- <div style="margin: 0 auto;width:50%"><img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/2ef2a75b-4607-46aa-97d7-11a8b9245739.png" tppabs="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/2ef2a75b-4607-46aa-97d7-11a8b9245739.png"></div> -->
 
 
 					<div class="layui-carousel" id="test10">
@@ -143,7 +145,7 @@
 			  <div class="layui-timeline-content layui-text">
 				<h3 class="layui-timeline-title">2016</h3>
 					<blockquote class="layui-elem-quote">
-						<p style="text-indent: 0 !important;font-size: 1rem;">
+						<p style="text-indent: 0 !important;">
 							Practicing nunchucks is a difficult and fulfilling process. The honing of skills comes with bruises black and blue on my body, while my will is constantly honed. I grew to enjoy sweating profusely after a workout, as these droplets serve as a testament to what I accomplished. 
 						</p>
 					</blockquote>
