--- a/dream.html
+++ b/dream.html
@@ -118,7 +118,7 @@
 
 				<div>
 					<img style="width: 33vw;margin-left: 13vw;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/2aef0e88-c3ab-4366-b30e-e2e7228f838b.JPG" tppabs="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/2aef0e88-c3ab-4366-b30e-e2e7228f838b.JPG">
-					<div class="peach-desc" style="color: #000;">Beach and Ocean</div>
+					<div class="peach-desc">Beach and Ocean</div>
 				</div>
 
 				<div>
@@ -128,12 +128,12 @@
 
 				<div>
 					<img style="width: 33vw;margin-left: 13vw;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/aeef404e-621d-487d-9ce0-33ea4c5ec97d.JPG" tppabs="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/aeef404e-621d-487d-9ce0-33ea4c5ec97d.JPG">
-					<div class="peach-desc"  style="color: #000;">Sea of Flowers</div>
+					<div class="peach-desc">Sea of Flowers</div>
 				</div>
 
 				<div>
 					<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/b488c192-3027-472b-91eb-0ad03a48ae14.JPG" tppabs="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/b488c192-3027-472b-91eb-0ad03a48ae14.JPG">
-					<div class="peach-desc" style="color: #000;">Prairie</div>
+					<div class="peach-desc">Prairie</div>
 				</div>
 
 				<div>
@@ -202,7 +202,7 @@
 
 				<div>
 					<img style="height: 100%;width: 31vw;margin-left: 14vw;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/6c9723d0-9962-405d-8366-59ef0ca6c814.JPG" tppabs="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/6c9723d0-9962-405d-8366-59ef0ca6c814.JPG">
-					<div class="peach-desc" style="color: #000;">Mantis Boxing</div>
+					<div class="peach-desc">Mantis Boxing</div>
 				</div>
 
 				<div>
