--- a/design.html
+++ b/design.html
@@ -76,7 +76,7 @@
     <div class="scroll-pendant-box">
         <div class="pendant-line"></div>
         <div>
-            <img class="pendant-scroll" src="../../static/img/cat-scroll.svg">
+            <img class="pendant-scroll" src="../../static/img/cookie-scroll.svg">
         </div>
     </div>
     
