修改部分， 增加一个导航栏子项

--- a/academic.html
+++ b/academic.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <title>Academic Achievements</title>
 	<link rel="shortcut icon" href="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/cd0522b1-ba5f-4816-97d5-5d416ff96e63.jpeg">
     <link rel="stylesheet" href="static/aos-master/dist/aos.css'" media="all" />
     <script src="static/jquery.js"></script>
@@ -15,9 +15,9 @@
     <script src="https://cdn.bootcss.com/typed.js/2.0.9/typed.min.js"></script>
 
 	<style>
-		::-webkit-scrollbar {
+		/* ::-webkit-scrollbar {
 			width: 0;
-		}
+		} */
 	</style>
 
 </head>
@@ -108,16 +108,13 @@
 
 </body>
 
-   
-
-</html>
-
-<script type="text/javascript">
-
+<script>
 	$(window).ready(()=> {
 		setTimeout(() => {
 			$("#loading").fadeOut(500)
 		},1500)
 	})
-
 </script>
+
+</html>
+
