--- a/calligraphy.html
+++ b/calligraphy.html
@@ -71,6 +71,13 @@
     			<div class="">></div>
     		</div>
     	</a>
+
+		<a href="academic.html">
+    		<div class="flex-row justify-between">
+    			<div class="">Academic Achievements</div>
+    			<div class="">></div>
+    		</div>
+    	</a>
     </div>
     
     <div class="scroll-pendant-box">
@@ -115,67 +122,67 @@
 		</fieldset>
 
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">City Wall - 2016 International Photography Culture Exhibition</legend>
 		</fieldset>
 		
         <img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/74207b14-025f-4a11-b67d-0d17e0eebd15.JPG" />
 	
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Medals at the Exibition</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/960f5cbf-1e60-4baf-9886-02acad535001.JPG" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Seal Cutting Works</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/bab1526a-06bc-48af-9709-7bfcf112f963.JPG" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Yuqi's seven-year-old big-seal style calligraphy work</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/36c7de97-5d53-4267-91bc-867e17115419.JPG" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Yuqi's 9-year-old official script calligraphy work</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/184640b6-10fb-42d1-82ff-8cae95686aa2.JPG" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Yuqi's calligraphy work on Tablet of Wei Dynasty at the age of 10</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/705c9ffa-aad9-42b5-9124-effaf97382b9.JPG" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Yuqi's calligraphy work of running and cursive script at the age of 11</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/fe08c9ae-e35f-4601-802e-76c0e4578691.JPG" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Yuqi's calligraphy work at the age of 12</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/d4a3f8cd-da50-4dec-8a3d-da389ad7b0ed.JPG" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Yuqi's 15 year official script calligraphy work</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/bbdef098-28ff-438f-9c80-1176509b420c.jpg" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Yuqi's 16-year-old running calligraphy work</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/fc1392e3-44da-4232-8a6e-9e01bccd9dc6.png" />
 		
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Yuqi's 17-year-old Small Seal calligraphy work</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/b27f8dda-d767-4b21-a28c-dd9023cd98ae.JPG" />
@@ -201,17 +208,17 @@
 		</fieldset>
 
 		
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Line Drawing & Colored Pencil Painting</legend>
 		</fieldset>
 		<img  src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/632ef00b-7770-4bab-a133-e1d12f7f34a2.JPG" />
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Life Sketching</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/b6186064-532c-414a-802e-ca564028bb65.JPG" />
 
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subsubtitle">
 			<legend style="font-size: 1.3rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">Gouache & Watercolor</legend>
 		</fieldset>
 		<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/1fe28934-964e-43bf-8475-140e28cd8787.JPG" />
