--- a/design.html
+++ b/design.html
@@ -71,6 +71,13 @@
     			<div class="">></div>
     		</div>
     	</a>
+
+        <a href="academic.html">
+    		<div class="flex-row justify-between">
+    			<div class="">Academic Achievements</div>
+    			<div class="">></div>
+    		</div>
+    	</a>
     </div>
     
     <div class="scroll-pendant-box">
