add ip strategy

--- a/chorus.html
+++ b/chorus.html
@@ -106,13 +106,24 @@
 			<legend style="font-size: 2rem;font-weight: 700;">Chorus & Bel Canto Solo</legend>
 		</fieldset>
 
-		<p style="font-size: 1.4rem;">
-			I established a music therapy program at my school as I've come to strongly appreciate the healing nature of music from my experience as a choir director for seven years and a student conductor for three years with concerts across many countries.
-		</p>
+
+		<blockquote class="layui-elem-quote" style="margin-left: 2em">
+			<p style="font-size: 1.4rem;">
+				I established a music therapy program at my school as I've come to strongly appreciate the healing nature of music from my experience as a choir director for seven years and a student conductor for three years with concerts across many countries.
+			</p>
+		</blockquote>
+		
+
+		
 
 		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
 			<legend style="font-size: 1.5rem;font-weight: 600">The 9th World Peace Choral Festival & <br/> Performance at the United Nations Headquarter in Vienna</legend>
 		</fieldset>
+
+		<div class="content-img-row-2 flex-row justify-around">
+			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/df47f005-41c3-433b-820c-9477d8b022b6.jpg">
+			<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/d31669d3-8bcc-4be2-8c99-2387aed990d7.jpg">
+		</div>
 
 		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
 			<legend style="font-size: 1.5rem;font-weight: 600">Performances at Goldener Saal Wiener Musikvereins and the Nursing Home</legend>
