--- a/dream.html
+++ b/dream.html
@@ -111,6 +111,14 @@
 			<legend style="font-size: 1.5rem;font-weight: 600">Leaping and Freedom</legend>
 		</fieldset>
 
+
+		<blockquote class="layui-elem-quote" style="margin-left: 2em;">
+			<p>During my travels to 16 provinces in China and 8 other countries, I discovered my fascination with nature and a sense of freedom. I'm more accepting of the whole world now that I have experienced many races, ethnicities, and viewpoints.</p>
+			<p>My ability to bounce, which is also a talent employed in martial arts flips, allowed me to take 2nd place in the intercollegiate "sandpit jumping" competition.</p>
+		</blockquote>
+		
+
+
 		<div class="layui-carousel" id="dream-test12">
 			<div carousel-item="" class="carousl-item">
 				<div>
