--- a/chorus.html
+++ b/chorus.html
@@ -159,6 +159,7 @@
     
 
     
+	<script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "ba8c9c2783f5604cb7388c414caa9b5db93cad62738abb18b34376d3ec37a027", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com.cn/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
 
 </body>
 <script type="text/javascript">
