--- a/about.html
+++ b/about.html
@@ -94,18 +94,19 @@
 				<div class="title">Yuqi Li (Yuki) </div>
 				<div class="intro">The Affiliated High School of Shanxi University & Insight Academy of Canada (obtained a diploma after passing the high school academic level test ahead of schedule)</div>
 				<div class="intro">There are 3 key words to describe myself: empathic, initiative and self-challenging.</div>
+				<div class="intro-desc">I'm accustomed to stepping out of my comfort zone and attempting new things in both academics and life. I'm also an excellent listener, a "tree hole" for those around me, and a fervent advocate of worthy causes both domestically and abroad.</div>
+				<div class="intro-desc">Inspired by martial arts philosophy, I am used to speaking out for the underprivileged and neglected beings (birds in nature, dwindling wild leopards, struggling depressed patients, groups hit hard by the pandemic, Africans with underserved health care and electricity, and schoolgirls suffering from period poverty and period stigma). </div>
 				
 			</div>
 			<div class="about-content-img flex-column align-center justify-center">
-				<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/8ba19a48-0b17-4b4e-b447-6a8de5805f78.JPG">	
+				<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/0e27a2e9-6c6a-4374-bdc6-faccb481ffa2.png">	
+				
 			</div>
 			
 		</div>
 	
 		<div class="about-content flex-column align-center" style="margin-top: -2rem;">
 			<div class="about-content-text flex-column align-center justify-center" style="width: 80%;"> 
-				<div class="intro-desc">I'm accustomed to stepping out of my comfort zone and attempting new things in both academics and life. I'm also an excellent listener, a "tree hole" for those around me, and a fervent advocate of worthy causes both domestically and abroad.</div>
-				<div class="intro-desc">Inspired by martial arts philosophy, I am used to speaking out for the underprivileged and neglected beings (birds in nature, dwindling wild leopards, struggling depressed patients, groups hit hard by the pandemic, Africans with underserved health care and electricity, and schoolgirls suffering from period poverty and period stigma). </div>
 			</div>
 		</div>
 
@@ -117,7 +118,7 @@
 		<div class="about-content flex-column align-center" style="margin-top: -2rem;">
 			<div class="about-content-text flex-column align-center justify-center" style="width: 80%;"> 
 				<div class="intro-desc">High contagiousness and COVID-19's ensuing restrictions hindered my studies and caused a seven-month hiatus in standardized testing (cancellations of TOEFL and ACT tests). Unfortunately, I was quarantined and unable to take exams after six months of coursework and independent study for seven AP tests (Biology, Chemistry, Psychology, Environmental Science, Physics C: Mechanics, Statistics, and Calculus BC). </div>
-				<div class="intro-desc">On the bright side, my mission for health-related charity has grown clearer.</div>
+				<div class="intro-desc" style="width: 100%">On the bright side, my mission for health-related charity has grown clearer.</div>
 				<div class="intro-desc">Early 2020, while preparing for High School Entrance Examination, "what should I do?" repeatedly haunted my mind. On Valentine's Day, via intensive liaison, a 15-peer team, called "Little Acts of Kindness, passion on Love", was organized from 9 cities. Besides, the "E-support" platform built enabled us to understand the quantity and dearth of medical supplies in each hospital. Our recipients were concentrated in the hardest-hit and underserved institutions in mountainous and remote villages. In the course of the event, my leisure time was spent contacting sources, purchasing supplies, designing posters and logos, and posting content on official accounts to advertise, all while having a heart of gold. Overall, we exceeded our goal with $15292.85 to support 49 medical institutions. Lasting until now, I continued to lead the team and set up incubation funds for disadvantaged groups at home and abroad.</div>
 				<div class="intro-desc">Days fighting against the epidemic had awakened me from dormancy, renewed my sense of the fragility of human beings, touched by the greatness of personality, re-evaluated the dimensions of my life of myself and the times, and strengthened my determination to devote myself to health philanthropy for life.</div>
 			</div>
@@ -145,6 +146,8 @@
 			$("#loading").fadeOut(500)
 		},1500)
 	})
+
+	
 </script>
 
 </html>
