--- a/kungfu.html
+++ b/kungfu.html
@@ -110,6 +110,10 @@
 			<legend style="font-size: 2rem;font-weight: 700;">Chinese Martial Arts (Kungfu)</legend>
 		</fieldset>
 
+
+		<img style="width: 100%;margin: 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/e852ec58-a7ee-4cdf-90f1-398ce9aaec73.png" />
+		<img style="width: 100%;margin: 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/885e4f91-518a-4631-bf0a-2873af6f51e4.png" />
+
 		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
 			<legend style="font-size: 1.5rem;font-weight: 600">World Nunchaku Federation Competition (WNF)</legend>
 		</fieldset>
