--- a/about.html
+++ b/about.html
@@ -90,9 +90,9 @@
 	<div class="kungfu-box flex-column">
 		<div class="about-content flex-row ">
 
-			<div class="about-content-text flex-column align-center justify-center" style="justify-content: space-evenly;height:100vh"> 
+			<div class="about-content-text flex-column align-center justify-center" style="padding: 0 0 0 2%;justify-content: space-evenly;height:100vh"> 
 				<div class="title">Yuqi Li (Yuki) </div>
-				<div class="intro">The Affiliated High School of Shanxi University & Insight Academy of Canada (obtained a diploma after passing the high school academic level test ahead of schedule)</div>
+				<div class="intro">The Affiliated High School of Shanxi University(obtained a diploma after passing the high school academic level test ahead of schedule) & Insight Academy of Canada</div>
 				<div class="intro">There are 3 key words to describe myself: empathic, initiative and self-challenging.</div>
 				<div class="intro-desc">I'm accustomed to stepping out of my comfort zone and attempting new things in both academics and life. I'm also an excellent listener, a "tree hole" for those around me, and a fervent advocate of worthy causes both domestically and abroad.</div>
 				<div class="intro-desc">Inspired by martial arts philosophy, I am used to speaking out for the underprivileged and neglected beings (birds in nature, dwindling wild leopards, struggling depressed patients, groups hit hard by the pandemic, Africans with underserved health care and electricity, and schoolgirls suffering from period poverty and period stigma). </div>
