--- a/about.html
+++ b/about.html
@@ -115,8 +115,8 @@
 			<legend style="font-size: 1.5rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">The Impact of COVID-19 🦠</legend>
 		</fieldset>
 
-		<div class="about-content flex-column align-center" style="margin-top: -2rem;">
-			<div class="about-content-text flex-column align-center justify-center" style="width: 80%;"> 
+		<div class="about-content flex-column" style="margin-top: -2rem;">
+			<div class="about-content-text flex-column align-center justify-center" style="width: 96%;"> 
 				<div class="intro-desc">High contagiousness and COVID-19's ensuing restrictions hindered my studies and caused a seven-month hiatus in standardized testing (cancellations of TOEFL and ACT tests). Unfortunately, I was quarantined and unable to take exams after six months of coursework and independent study for seven AP tests (Biology, Chemistry, Psychology, Environmental Science, Physics C: Mechanics, Statistics, and Calculus BC). </div>
 				<div class="intro-desc" style="width: 100%">On the bright side, my mission for health-related charity has grown clearer.</div>
 				<div class="intro-desc">Early 2020, while preparing for High School Entrance Examination, "what should I do?" repeatedly haunted my mind. On Valentine's Day, via intensive liaison, a 15-peer team, called "Little Acts of Kindness, passion on Love", was organized from 9 cities. Besides, the "E-support" platform built enabled us to understand the quantity and dearth of medical supplies in each hospital. Our recipients were concentrated in the hardest-hit and underserved institutions in mountainous and remote villages. In the course of the event, my leisure time was spent contacting sources, purchasing supplies, designing posters and logos, and posting content on official accounts to advertise, all while having a heart of gold. Overall, we exceeded our goal with $15292.85 to support 49 medical institutions. Lasting until now, I continued to lead the team and set up incubation funds for disadvantaged groups at home and abroad.</div>
