--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 	<div class="kungfu-box flex-column">
 		<div class="about-content flex-row ">
 
-			<div class="about-content-text flex-column align-center justify-center" style="padding: 0 0 0 2%;justify-content: space-evenly;height:100vh"> 
+			<div class="about-content-text flex-column align-center justify-center" style="padding: 0 0 0 2%;gap: 1rem;height:100vh"> 
 				<div class="title">Yuqi Li (Yuki) </div>
 				<div class="intro">The Affiliated High School of Shanxi University(obtained a diploma after passing the high school academic level test ahead of schedule) & Insight Academy of Canada</div>
 				<div class="intro">There are 3 key words to describe myself: empathic, initiative and self-challenging.</div>
@@ -105,13 +105,8 @@
 			
 		</div>
 	
-		<div class="about-content flex-column align-center" style="margin-top: -2rem;">
-			<div class="about-content-text flex-column align-center justify-center" style="width: 80%;"> 
-			</div>
-		</div>
 
-
-		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
+		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle" style="margin-top: 0 !important;">
 			<legend style="font-size: 1.5rem;font-weight: 600;font-family: 'Times New Roman', Times, serif; ">The Impact of COVID-19 🦠</legend>
 		</fieldset>
 
@@ -149,6 +144,8 @@
 
 	
 </script>
+
+
 
 </html>
 
