--- a/calligraphy.html
+++ b/calligraphy.html
@@ -111,7 +111,7 @@
 		<div class="arts-cover-box flex-row align-center">
 			<div class="arts-cover-img"><img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/b29af0de-8f70-41d4-850f-2cf33837671c.JPG" /></div>
 			<div class="arts-cover-icon flex-row align-center justify-center">
-				<i class="layui-icon layui-icon-return" style="font-size: 3rem; color: #000000;"></i>
+				<i class="layui-icon layui-icon-return" style="font-size: 3rem; color: #fff;"></i>
 			</div>
 			<div class="arts-cover-text flex-row align-center">YUQI</div>
 			
