--- a/chorus.html
+++ b/chorus.html
@@ -117,7 +117,7 @@
 		
 
 		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
-			<legend style="font-size: 1.5rem;font-weight: 600">The 9th World Peace Choral Festival & <br/> Performance at the United Nations Headquarter in Vienna</legend>
+			<legend style="font-size: 1.5rem;font-weight: 600">World Peace Choral Festival & Performance at the United Nations Headquarter in Vienna</legend>
 		</fieldset>
 
 		<div class="content-img-row-2 flex-row justify-around">
