--- a/kungfu.html
+++ b/kungfu.html
@@ -111,8 +111,14 @@
 		</fieldset>
 
 
-		<img style="width: 100%;margin: 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/e852ec58-a7ee-4cdf-90f1-398ce9aaec73.png" />
+		<div class="card-box">
+			<img style="width: 100%;margin: 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/e852ec58-a7ee-4cdf-90f1-398ce9aaec73.png" />
+		</div>
+		<div style="width: 100%;height: 50px"></div>
 		<img style="width: 100%;margin: 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/885e4f91-518a-4631-bf0a-2873af6f51e4.png" />
+
+
+
 
 		<fieldset class="layui-elem-field layui-field-title kungfu-subtitle">
 			<legend style="font-size: 1.5rem;font-weight: 600">World Nunchaku Federation Competition (WNF)</legend>
@@ -151,7 +157,10 @@
 						</p>
 					</blockquote>
 
-					<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/62150e04-6de4-432e-8046-d1c7882b5efc.jpg">
+					<div class="award-img-box flex-row justify-around">
+						<img src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/62150e04-6de4-432e-8046-d1c7882b5efc.jpg">
+
+					</div>
 
 			  </div>
 			</li>
@@ -225,6 +234,6 @@
 
     
 </script>
-   
+
 </html>
 
