--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="static/layui/css/layui.css" media="all" />
     <link rel="stylesheet" href="static/menu.css" media="all" />
     <script src="https://cdn.bootcss.com/typed.js/2.0.9/typed.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
+
 
 	<style>
 		::-webkit-scrollbar {
