--- a/chorus.html
+++ b/chorus.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="static/index.css" media="all" />
     <link rel="stylesheet" href="static/menu.css" media="all" />
     <script src="https://cdn.bootcss.com/typed.js/2.0.9/typed.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
+
 </head>
 
 
@@ -80,10 +82,10 @@
     	</a>
     </div>
     
-    <div class="scroll-pendant-box">
+	<div class="scroll-pendant-box">
         <div class="pendant-line"></div>
         <div>
-            <img class="pendant-scroll" src="../../static/img/cookie-scroll.svg">
+            <img onmousedown="party.confetti(this)" class="pendant-scroll" src="../../static/img/cookie-scroll.svg">
         </div>
     </div>
     
