--- a/kungfu.html
+++ b/kungfu.html
@@ -11,10 +11,12 @@
     <script src="static/jquery.js"></script>
     <script src="static/layui/layui.js"></script>
 	<link rel="stylesheet" href="static/layui/css/layui.css" media="all" />
+	<link rel="stylesheet" href="static/kungfu-article.css" media="all" />
     <link rel="stylesheet" href="static/index.css" media="all" />
     <link rel="stylesheet" href="static/menu.css" media="all" />
    
     <script src="https://cdn.bootcss.com/typed.js/2.0.9/typed.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
 </head>
 
 
@@ -84,7 +86,7 @@
     <div class="scroll-pendant-box">
         <div class="pendant-line"></div>
         <div>
-            <img class="pendant-scroll" src="../../static/img/cookie-scroll.svg">
+            <img onmousedown="party.confetti(this)" class="pendant-scroll" src="../../static/img/cookie-scroll.svg">
         </div>
     </div>
     
@@ -114,8 +116,8 @@
 		<div class="card-box">
 			<img style="width: 100%;margin: 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/e852ec58-a7ee-4cdf-90f1-398ce9aaec73.png" />
 		</div>
-		<div style="width: 100%;height: 50px"></div>
-		<img style="width: 100%;margin: 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/885e4f91-518a-4631-bf0a-2873af6f51e4.png" />
+		<img style="width: 100%;margin: 40px 0 12px 0; box-shadow: none;" src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-49bdbaed-e3f4-48f9-a64f-e563b0edcd86/0e3daba9-3463-4059-9a5c-52dd0675cb1a.png" />
+		<p class="kungfu-p">( ChinaDaily: <a><span>https://mp.weixin.qq.com/s/EkZUvu51hwkxN5qG-PpDFQ</span></a> ) </p>
 
 
 
